fixed bootstrap gridding + css for navbar user indicator dot on smaller screens

--- a/assembly_code_visualiser/public/stylesheets/style.css
+++ b/assembly_code_visualiser/public/stylesheets/style.css
@@ -11,6 +11,11 @@ body {
 	overflow-x: hidden;
 }
 
+.container-fluid {
+	margin: 0;
+	padding: 0;
+}
+
 /* all navbar stuff */
 .navbar {
 	display: flex;
@@ -49,17 +54,19 @@ body {
 	align-items: center;
 }
 
-#navbar_title {
-	color: whitesmoke;
-	padding-left: 1.6em;
-	padding-right: 1.25em;
-}
-
 #navbar_user_indicator {
 	position: absolute;
-	max-height: 50%;
+	max-height: 1.5em;
+	display: flex;
+	flex-flow: row nowrap;
 	justify-content: flex-start;
-	/* vertical-align: middle; */
 	padding-top: 0.35em;
 	padding-bottom: 0.35em;
+	padding-left: 0.5em;
+}
+
+#navbar_title {
+	color: whitesmoke;
+	padding-left: 2em;
+	padding-right: 1.25em;
 }
